finally fixed css problem as well as a few other layout issues
git-svn-id: http://chianti.ucsd.edu/svn@4100 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/pathblast/trunk/web/docs/pathblast.css
+++ b/pathblast/trunk/web/docs/pathblast.css
@@ -141,10 +141,15 @@ table.result {
 	width:100%;
 }
 
+th {
+	text-align:left;
+}
+
 th.result {
         background-color:#eeeeee;
 	text-align:left;
 }
+
 li ul {
 	list-style-type:square;
 	display: none;
